src/main/java/com/example/template/global/docs/error/errors/CommonInternalServerErrorResponseDocs.java
package com.example.template.global.docs.error.errors;

import com.example.template.global.domain.dto.CommonResponse;
import io.swagger.v3.oas.annotations.media.Content;
import io.swagger.v3.oas.annotations.media.ExampleObject;
import io.swagger.v3.oas.annotations.media.Schema;
import io.swagger.v3.oas.annotations.responses.ApiResponse;

import java.lang.annotation.ElementType;
import java.lang.annotation.Inherited;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Target({ElementType.METHOD, ElementType.TYPE})
@Retention(RetentionPolicy.RUNTIME)
@Inherited
@ApiResponse(
        responseCode = "500",
        description = "서버 내부 오류",
        content = @Content(
                mediaType = "application/json",
                schema = @Schema(implementation = CommonResponse.class),
                examples = @ExampleObject(
                        name = "서버 오류 응답 예시",
                        value = """
                                {
                                    "result": "FAIL",
                                    "code": "G001",
                                    "message": "서버 내부 오류가 발생했습니다. 잠시 후 다시 시도해주세요.",
                                    "timestamp": "2026-01-17 12:00:00"
                                }
                                """
                )
        )
)
public @interface CommonInternalServerErrorResponseDocs {
}
